examples/test/testpolicy14754.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14754
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key40: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value17
          key25: value3
      podSelector:
        matchLabels:
          key21: value25
          key20: value1
